--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is official Website of Founders Language School in Tashkent"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -16,7 +16,6 @@
       type="text/css"
       href="//fonts.googleapis.com/css?family=Josefin+Sans"
     />
-    <link href="http://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -24,7 +23,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <title>Founders Language School</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
