--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This is official Website of Founders Language School in Tashkent"
+      content="This is official Website of Founders Language School in Tashkent. You can learn General English and prepare for IELTS examine in our Learning Center"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
